[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/screens/title.png" type="Texture" id=1]
[ext_resource path="res://assets/buttons/game mode.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/play.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/normal.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/harcore.png" type="Texture" id=5]
[ext_resource path="res://titlescreen.gd" type="Script" id=6]
[ext_resource path="res://assets/buttons/selectednormal.png" type="Texture" id=7]
[ext_resource path="res://assets/buttons/selectedhardcorepng.png" type="Texture" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -21.1371, 52.0805 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Sprite" parent="."]
position = Vector2( 100, 75 )
texture = ExtResource( 1 )

[node name="GameMode" type="TextureButton" parent="."]
visible = false
margin_left = 20.0
margin_top = 120.0
margin_right = 70.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="."]
margin_left = 70.0
margin_top = 105.0
margin_right = 120.0
margin_bottom = 145.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="TextureButton" parent="."]
visible = false
margin_left = 70.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -19.9466, 10.8511 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NormalSelected" type="TextureButton" parent="."]
visible = false
margin_left = 70.0
margin_top = 120.0
margin_right = 120.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -19.9466, 10.8511 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hardcore" type="TextureButton" parent="."]
visible = false
margin_left = 120.0
margin_top = 120.0
margin_right = 170.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HardcoreSelected" type="TextureButton" parent="."]
visible = false
margin_left = 120.0
margin_top = 120.0
margin_right = 170.0
margin_bottom = 160.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="NormalSelected" to="." method="_on_NormalSelected_pressed"]
[connection signal="pressed" from="Hardcore" to="." method="_on_Hardcore_pressed"]
[connection signal="pressed" from="HardcoreSelected" to="." method="_on_HardcoreSelected_pressed"]
